# AgentResearchPlatform

./: .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/routers/: forum.py
app/services/: event_types.py
docs/examples/: final_report_智能舆情分析报告_20260530_154827.html  sample-run.md
engines/ForumEngine/: __init__.py  llm_host.py
engines/InsightEngine/: __init__.py  agent.py  context.py
engines/InsightEngine/nodes/: _search_utils.py  generate_structure.py  initial_search.py  initial_summary.py  reflection_search.py  reflection_summary.py  save_report.py
engines/InsightEngine/prompts/: prompts.py
engines/InsightEngine/tools/: __init__.py  keyword_optimizer.py  search.py
engines/InsightEngine/utils/: db.py
engines/MediaEngine/: __init__.py  agent.py  context.py  graph.py  state.py
engines/MediaEngine/nodes/: __init__.py  _search_utils.py  format_report.py  generate_structure.py  save_report.py
engines/MediaEngine/prompts/: prompts.py
engines/MediaEngine/tools/: search.py
engines/MediaEngine/utils/: config.py
engines/QueryEngine/: __init__.py  agent.py  graph.py  state.py
engines/QueryEngine/nodes/: __init__.py  (+6 more)
engines/common/: llm_client.py
frontend/: index.html  tsconfig.app.json
frontend/src/: main.ts
tests/: test_app_forum_service.py  test_check_input_files.py  test_crawler_spider_config.py  test_crawler_topic_extractor.py  test_forum_engine_e2e.py  test_insight_engine_e2e.py  test_media_engine_e2e.py  test_query_engine_e2e.py  test_report_engine_e2e.py  test_report_engine_sanitization.py
(+38 files in other folders)
