[project]
name = "sentiment-analysis-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiomysql==0.3.2",
    "aiosqlite==0.21.0",
    "asyncmy==0.2.10",
    "asyncpg==0.31.0",
    "beautifulsoup4==4.14.3",
    "cryptography==46.0.3",
    "fastapi==0.121.1",
    "httpx==0.28.1",
    "jieba==0.42.1",
    "json-repair==0.44.1",
    "langchain-deepseek==1.0.1",
    "langchain-openai==1.1.0",
    "langgraph==1.0.4",
    "loguru==0.7.2",
    "lxml==6.1.1",
    "matplotlib==3.10.7",
    "motor==3.7.1",
    "numpy==1.26.4",
    "openai==1.109.1",
    "opencv-python==4.11.0.86",
    "pandas==2.2.3",
    "parsel==1.9.1",
    "pillow==10.4.0",
    "playwright==1.45.0",
    "psycopg[binary]==3.3.4",
    "pydantic==2.12.0",
    "pydantic-settings==2.11.0",
    "pyexecjs==1.5.1",
    "pyhumps==3.8.0",
    "pymysql==1.1.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2026.2",
    "redis==4.6.0",
    "regex==2026.5.9",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "sentence-transformers==5.1.2",
    "socksio==1.0.0",
    "sqlalchemy==2.0.43",
    "starlette==0.49.3",
    "tavily-python==0.7.24",
    "tenacity==8.2.2",
    "torch==2.9.0",
    "tqdm==4.67.3",
    "transformers==4.57.1",
    "typer==0.25.1",
    "uvicorn==0.37.0",
    "weasyprint==68.1",
    "wordcloud==1.9.6",
    "xhshow==0.1.9",
]
